syntax = "proto3";
package irismod.random;

import "random/random.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/irisnet/irismod/modules/random/types";

// Query creates service with guardian as rpc
service Query {
    // Random queries the random result
    rpc Random(QueryRandomRequest) returns (QueryRandomResponse) {
        option (google.api.http).get = "/irismod/random/randoms/{req_id}";
    }

    // RandomRequestQueue queries the random request queue
    rpc RandomRequestQueue(QueryRandomRequestQueueRequest) returns (QueryRandomRequestQueueResponse) {
        option (google.api.http).get = "/irismod/random/queue";
    }
}

// QueryRandomRequest is request type for the Query/Random RPC method
message QueryRandomRequest {
    string req_id = 1;
}

// QueryParametersResponse is response type for the Query/Random RPC method
message QueryRandomResponse {
    Random random = 1;
}

// QueryRandomRequestQueueRequest is request type for the Query/RandomRequestQueue RPC method
message QueryRandomRequestQueueRequest {
    int64 height = 1;
}

// QueryRandomRequestQueueResponse is response type for the Query/RandomRequestQueue RPC method
message QueryRandomRequestQueueResponse {
    repeated Request requests = 1 [ (gogoproto.nullable) = false ];
}